# SimpleSender

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
mailings/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
mailings/management/commands/: send_mailing.py
mailings/management/utils/: shared.py  utils.py  validators.py
mailings/migrations/: 0001_initial.py  0002_alter_mailing_end_datetime_and_more.py  0003_alter_client_patronymic.py  0004_alter_client_patronymic.py
mailings/services/: cache_service.py  mailing_service.py  mixins.py  registration_service.py  statistic_service.py  utils.py
mailings/templates/mailings/: base.html  index.html  mailing_attempts.html  user_attempts.html
mailings/templates/mailings/client/: client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  client_upload.html
mailings/templates/mailings/includes/: inc_navbar.html
mailings/templates/mailings/mailing/: mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  (+2 more)
mailings/views/: __init__.py  clients.py  mailings.py  messages.py  statistics.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: create_admin.py  create_managers.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_user_token.py  0004_alter_user_groups_alter_user_is_active.py
users/migrations/commands/: csu.py
users/templates/users/: login.html  password_reset.html  password_reset_confirm.html  register.html  user_detail.html  user_form.html  user_list.html
(+4 files in other folders)
